# calamr_interp

./: .gitignore  main.py  pyproject.toml
docs/: interpretability_techniques.md
notebooks/: 01_baselines.ipynb  02_structural.ipynb  04_attribution.ipynb  05_embeddings.ipynb  06_case_studies.ipynb  07_advanced_visuals.ipynb
scripts/: run_pca_comparison.py  run_phase3.py  run_phase7.py  run_pipeline.py
src/calamr_interp/: __init__.py  pca_comparison.py  phase1_baselines.py  phase2_structural.py  phase3_ablations.py  phase4_attribution.py  phase5_embeddings.py  phase6_case_studies.py  phase7_advanced.py
src/calamr_interp/utils/: __init__.py  data_loading.py  model_loading.py  statistics.py  visualization.py
