[project]
name = "calamr-interp"
version = "0.1.0"
description = "Interpretability research for graph-based AMR alignment hallucination detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.7.0",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "seaborn",
    "umap-learn",
    "networkx",
    "captum",
    "jupyter",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calamr_interp"]
